# waystt-wrapper

./: CLAUDE.md  Cargo.toml  README.md
.claude/: .gitignore
.claude/rules/: project-architecture.md
.ocrules/: rust
.opencode/: .editorconfig  opencode.jsonc
src/: config.rs  error.rs  main.rs  overlay.rs  process.rs
